--- a/Farmacia/estilos/styles.css
+++ b/Farmacia/estilos/styles.css
@@ -78,28 +78,32 @@ body{
     border: none; 
     color: #2c9529;
 }
+
 .menu{
-    list-style: none;
-    padding: 0;
-    background: #2c9529;
-    width: 100%;
-    margin: auto;
     display: flex;
     justify-content: space-between;
-    
+    list-style: none;
+    background: #2c9529;
 }
-a:visited{
+
+.menu a{
+    padding: 0 10px;
+}
+
+.menu a:visited{
     color: white;
 }
-a:link{
- color: white;
- text-decoration: none;
+
+.menu a:link{
+    color: white;
+    text-decoration: none;
+
 }
 
 .slider {
     overflow: hidden;
     width: 100%;
-    height: 86.4vh;
+    height: 86vh;
     margin: auto;
 }
 
@@ -134,6 +138,144 @@ a:link{
     75% { margin-left: -300%; }
     100% { margin-left: -300%; }
 }
+/** PANEL DE PUBLICIDAD**/
+.panelslider {
+    overflow: hidden;
+    width: 100%;
+    height: 300px;
+    margin: auto;
+}
 
-/** COMIENZAN LAS CATEGORIAS**/
+.panelslider ul{
+    display: flex;
+    width: 400%;
+    padding: 0;
+    animation: cambio 20s infinite alternate;
+    animation-timing-function: ease-in;
 
+}
+
+.panelslider li{
+    width: 100%;
+    list-style: none;
+}
+
+.panelslider img{
+    width: 100%;
+    height: 300px;
+}
+
+
+/** COMIENZAN LAS OFERTAS **/
+
+.p-slider{
+    display:contents;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.p-box{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    padding: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    border-radius: 10px;
+    margin: 0 20px;
+    position: relative;
+}
+
+.p-box-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+}
+
+.p-img a,
+.p-img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.p-img a img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: contain;
+}
+
+.p-box-text{
+    margin-top: 5px;
+    width: 100%;  
+}
+
+.p-category{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.p-category span{
+    color: #acacac;
+    font-size: 0.9rem;
+    margin: 5px 0;
+}
+
+.p-title{
+    color:#333333;
+    font-weight: 700;
+    text-decoration: none;
+    transition: all ease 0.3s;
+}
+
+.p-title:hover{
+    color:#111111;
+    opacity:0.7;
+    transition: all ease 0.3s;
+}
+
+.p-buy{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top:8px;
+}
+
+.p-buy .p-price{
+    font-size: 1.3rem;
+    color: #333333;
+    font-weight: 700;  
+}
+
+.p-buy .buy-btn{
+    color: #272e64;
+    margin:0 5px;
+    font-weight: 600 ;
+    text-decoration: none;
+}
+
+.p-buy .buy-btn:hover{
+    text-decoration: underline;   
+}
+
+.p-disc{
+    position: absolute;
+    left:20px;
+    top:20px; 
+    width: 65px;
+    height: 24px;
+    color:#ffffff;
+    background-color: #1e3980;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:0.7rem ;
+    letter-spacing: 0.1rem;
+    z-index:100;
+    border-radius: 3px;
+}
